# AI_MCP_A2A

./: .env.example  .gitignore  CLOUDFLARE_SETUP.md  README.md  auto_interview_startup.bat  best_free_solution.md  debug_ecos_api.py  deploy_best_free.ps1  deploy_github_pages.md  deploy_vercel.ps1  docker-compose.yml  docker_test_all_mcp.py  docker_test_mcp.py  interview_with_fixed_url.ps1  mise.toml  pyproject.toml  quick_status_check.bat  rebuild_agent.ps1  rebuild_all.ps1  requirements.txt  setup_auto_startup.bat  start_frontend.ps1  startup.bat  test_analysis_request.json  test_api_integration.py  test_final_agent.py  test_integrated_agent.py  test_mcp_servers.py  test_simple_analysis.json
docker/: README.md  docker-compose.yml
docker/agents/: Dockerfile  build.ps1  build.sh  docker-compose.yml
docker/mcp_servers/: Dockerfile  docker-compose.yml
docker/monitoring/: prometheus.yml
docker/scripts/: build.ps1  build.sh  start.ps1  start.sh  stop.ps1  stop.sh
docs/: a2a-inspector.txt  a2a-js_0.3.1.txt  a2a-protocol.org_latest_specification.md  a2a-python_0.3.0.txt  a2a-samples_0.3.0.txt  fastmcp_2.11.3_llms-full.txt  interview_preparation.md  kiwoom_rest_api_180_docs.md  kiwoom_rest_api_official_docs.xlsx  langchain-mcp-adapters.txt  langgraph-llms-full_0.6.2.txt  useful_zustand_docs.txt
docs/interview/: INTERVIEW_QA.md  README.md  TECHNICAL_IMPLEMENTATION.md
docs/learning_guides/: docker_learning_guide.md  testing_learning_guide.md
frontend/: fromt_sample.html  next.config.js  package-lock.json  package.json  vercel.json
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useInvestmentValidation.ts
kiwoom_mcp/: __init__.py  code_index.md
kiwoom_mcp/common/: __init__.py  domain_base.py
kiwoom_mcp/domains/: __init__.py  code_index.md  (+5 more)
src/: __init__.py
(+319 files in other folders)
